// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot for large badge 1`] = `
<Text
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#AF251D",
      "borderRadius": 1000,
      "color": "#FFFFFF",
      "display": "flex",
      "fontFamily": "OpenSans-Medium",
      "fontSize": 11,
      "fontWeight": "500",
      "height": 16,
      "includeFontPadding": false,
      "justifyContent": "center",
      "left": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "minWidth": 16,
      "padding": 0,
      "position": "absolute",
      "textAlign": "center",
      "textAlignVertical": "center",
      "top": -4,
    }
  }
  testID="badge_test_id"
>
  34
</Text>
`;

exports[`snapshot for small badge 1`] = `
<Text
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#AF251D",
      "borderRadius": 1000,
      "display": "flex",
      "fontFamily": "OpenSans",
      "fontSize": 16,
      "fontWeight": "400",
      "height": 6,
      "includeFontPadding": false,
      "justifyContent": "center",
      "letterSpacing": 0.5,
      "lineHeight": 24,
      "padding": undefined,
      "position": "absolute",
      "right": 0,
      "textAlign": "center",
      "textAlignVertical": "center",
      "top": 0,
      "width": 6,
    }
  }
  testID="badge_test_id"
>
  
</Text>
`;
